--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generator-nord-backbone",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Yeoman generator",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "main": "app/index.js",
-  "repository": "NordSoftware/generator-nord-backbone",
+  "repository": "nordsoftware/generator-nord-backbone",
   "author": {
     "name": "Nord Software",
     "email": "",
