--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "scripts": {
     "test": "mocha"
   },
+  "files": [
+    "app",
+    "component",
+    "view"
+  ],
   "keywords": [
     "yeoman-generator"
   ],
